tdf#146584: FB Setting default with ALTER TABLE works but gives useless message

ALTER is a DDL (DATA DEFINITION LANGAGE) instruction, no count row is expected.

Change-Id: I3d5bfe240b85c5b79392c92fdd870bc045e1eb46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154755
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins